# Krieg

./: .gitignore  CMakeLists.txt  Game.sln  Makefile  README.md  TODO.txt  build.bat  run.bat  run.sh
app/: Asteroid.cpp  Asteroid.h  CMakeLists.txt  CameraMovement.h  Enemy.cpp  Enemy.h  HUD.h  HealthComponent.cpp  HealthComponent.h  RocketLauncher.cpp  RocketLauncher.h  Ship.cpp  Ship.h  SpaceGame.cpp  SpaceGame.h  TargetComponent.h  Turret.cpp  Turret.h
assets/: Master.strings.bank  prototype_map.tmx  test.tmx  test2.tmx  test_map.csv
data/: Master.bank  prototype_map.tmx
data/audio/: Master.bank  Master.strings.bank
data/shaders/: Basic.frag  Basic.vert  Debug.frag  Debug.vert  Shape.frag  Shape.vert  Sprite.frag  Sprite.vert  Text.frag  Text.vert  Texture.frag  Texture.vert  Transform.vert
orbital/: CMakeLists.txt  Collision.h  DamageReceiver.cpp  DamageReceiver.h  Drone.cpp  Drone.h  Effects.cpp  Effects.h  Explosion.cpp  Explosion.h  HUD.cpp  HUD.h  Health.cpp  Health.h  Main.cpp  Orbit.cpp  Orbit.h  OrbitalGame.cpp  OrbitalGame.h  Planet.cpp  Planet.h  Player.cpp  Player.h  Powerups.cpp  Powerups.h  Rocket.cpp  Rocket.h  Timer.cpp  Timer.h
puzzle/: CMakeLists.txt  Main.cpp
src/: AIComponent.cpp  AIComponent.h  AIState.h  Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  Assert.h  Asteroid.cpp  Asteroid.h  AudioComponent.cpp  AudioComponent.h  AudioSystem.cpp  AudioSystem.h  BGSpriteComponent.cpp  BGSpriteComponent.h  BackgroundComponent.cpp  BackgroundComponent.h  Box2DDebugRenderer.cpp  Box2DDebugRenderer.h  BoxColliderComponent.cpp  BoxColliderComponent.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraMovement.cpp  CameraMovement.h  CircleColliderComponent.cpp  CircleColliderComponent.h  CircleComponent.cpp  CircleComponent.h  ColliderComponent.cpp  ColliderComponent.h  Collision.cpp  Collision.h  Collisions.cpp  (+118 more)
